fix: spacing

--- a/src/app/pages/timeline/timeline.scss
+++ b/src/app/pages/timeline/timeline.scss
@@ -42,8 +42,8 @@
   }
   .month {
     width: 10px;
-    height: 22px;
-    margin: -1px 0;
+    height: 24px;
+    margin: -2px 0;
   }
   .dots {
     display: flex;
